fix: linux命令